--- a/Atam'dan hatıra şehirler/paris.html
+++ b/Atam'dan hatıra şehirler/paris.html
@@ -42,7 +42,7 @@
             <!-- Giriş -->
             <section class="content-section">
                 <div class="feature-image">
-                    <img src="./assests/paris3.jpg" alt="1919 yılında Paris'ten bir görünüm">
+                    <img src="./assests/images/paris3.jpg" alt="1919 yılında Paris'ten bir görünüm">
                     <p class="image-caption">1919 yılında Paris'in tarihi bir fotoğrafı</p>
                 </div>
                 
